# edof

./: .gitignore  README.md  pyproject.toml  requirements-edof.txt
configs/edof_reproduction/: a489_poly1d_base.json  mac_optimized_smoke.yaml  mac_smoke.yaml  windows_baseline_eval.yaml  windows_exact_baseline_eval.yaml  windows_full.yaml  windows_optimized.yaml  (+10 more)
edof_reproduction/: __init__.py  __main__.py  config.py  convergence.py  dataset.py  evaluation.py  imaging.py  metrics.py  nafnet.py  optics.py  poly1d.py  provenance.py  runner.py  selection.py
scripts/: run_doe_raw_optimization.py  run_ordered_optimization_sequence.py  run_recommended_sequence.py  run_smooth_loss_ablation.py  run_smooth_psf_gate.py  run_strict_finetune_from_convergence.py  run_strict_full_fov_evaluation.py  run_strict_optics_convergence.py  run_strict_spatial_finetune_from_convergence.py  run_strict_unified_spatial_evaluation.py  windows_edof_bootstrap.ps1  windows_edof_sequence_start.ps1  windows_edof_sequence_worker.ps1  windows_edof_start.ps1  windows_edof_worker.ps1  windows_ordered_optimization_start.ps1  windows_ordered_optimization_worker.ps1  windows_strict_evaluation_start.ps1  windows_strict_evaluation_worker.ps1  windows_strict_finetune_start.ps1  windows_strict_finetune_worker.ps1  windows_strict_optics_start.ps1  windows_strict_optics_worker.ps1  windows_strict_spatial_finetune_start.ps1  windows_strict_spatial_finetune_worker.ps1
tests/: test_edof_reproduction_nafnet.py  test_edof_reproduction_pipeline.py  test_edof_reproduction_poly1d.py  test_edof_reproduction_selection.py
